--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "2.1.1",
     "framer-motion": "~11.1.1",
     "react": "18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
     "tailwind-variants": "0.1.20",
